<resources>
    <string name="app_name">AICTE</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="we_will_send_otp_on_this_number">We will send OTP on this Number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="todo">TODO</string>
    <string name="please_enter_the_otp_sent_to_you">Please enter the OTP sent to you</string>
    <string name="submit">Submit</string>
    <string name="dashboard">Dashboard</string>
    <string name="total_institutions">Total Institutions</string>
    <string name="new_institutions">New Institutions</string>
    <string name="title_activity_institutelapproval">institutelapproval</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>