<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluebackground"
    tools:context=".entermobilenumber">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_sendotp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            android:src="@drawable/sendotp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:text="@string/otp_verification"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:text="@string/we_will_send_otp_on_this_number"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textSize="20sp"
            android:text="@string/enter_mobile_number"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="italic" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_gravity="center"
            android:background="@drawable/backgroundbox"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_marginLeft="50dp"
                android:text="+91"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/inputmobilenumber"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="9876543210"
                android:imeOptions="actionDone"
                android:maxLength="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttongetotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:background="@drawable/backgroundbutton"
                android:text="Get Otp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/progressbar_getotp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>






    </LinearLayout>
</ScrollView>