<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@color/bluebackground"
    tools:context=".verifyenterdotp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/incominggif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:text="@string/otp_verification"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:text="@string/please_enter_the_otp_sent_to_you"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textmobileshownumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="italic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputotp1"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LableFor"/>

            <EditText
                android:id="@+id/inputotp2"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LableFor"/>

            <EditText
                android:id="@+id/inputotp3"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LableFor"/>

            <EditText
                android:id="@+id/inputotp4"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LableFor"/>

            <EditText
                android:id="@+id/inputotp5"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LableFor"/>

            <EditText
                android:id="@+id/inputotp6"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LableFor"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Didn't receivethe OTP?"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textresendotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="Resend OTP"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"/>


    </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/otpsubmitbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:background="@drawable/backgroundbutton"
                android:text="@string/submit"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/progressbar_verifyotp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>








    </LinearLayout>
</ScrollView>